add overlays and RS485 fix for vkrzg2ul

--- a/meta-vkg2l/conf/machine/vkrzg2l.conf
+++ b/meta-vkg2l/conf/machine/vkrzg2l.conf
@@ -33,6 +33,8 @@ KERNEL_DEVICETREE_OVERLAY  = " \
     renesas/overlays-vkrzg2l/vkrz-dsi-hdmi.dtbo \
    	renesas/overlays-vkrzg2l/vkrz-dsi-kd070hdfia030.dtbo \
     renesas/overlays-vkrzg2l/vkrz-dsi-kd101wxfid045.dtbo \
+    renesas/overlays-vkrzg2l/vkrz-dsi-kd101wxfid045-ena.dtbo \
+    renesas/overlays-vkrzg2l/vkrz-dsi-kd101wxfid045-pwr.dtbo \
     renesas/overlays-vkrzg2l/vkrz-dsi-vklcd-ee0700.dtbo \
     renesas/overlays-vkrzg2l/vkrz-dsi-vklcd07.dtbo \
     renesas/overlays-vkrzg2l/vkrz-exp-pwm0.dtbo \
